added folder with homework_11

--- a/seminar_11/pandasLearn.ipynb
+++ b/seminar_11/pandasLearn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4       850.0       237.0         2.9375             81700.0  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "(3000, 9)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[3000 rows x 9 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -466,29 +466,186 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-119.56</td>\n",
+       "      <td>36.51</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1018.0</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>663.0</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>1.6635</td>\n",
+       "      <td>67000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-121.43</td>\n",
+       "      <td>38.63</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>1009.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>604.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>1.6641</td>\n",
+       "      <td>67000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-120.81</td>\n",
+       "      <td>37.53</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>1.8750</td>\n",
+       "      <td>181300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>-118.45</td>\n",
+       "      <td>34.07</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>4845.0</td>\n",
+       "      <td>1609.0</td>\n",
+       "      <td>3751.0</td>\n",
+       "      <td>1539.0</td>\n",
+       "      <td>1.5830</td>\n",
+       "      <td>350000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>-117.27</td>\n",
+       "      <td>34.09</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>848.0</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>0.9838</td>\n",
+       "      <td>79300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2943</th>\n",
+       "      <td>-121.23</td>\n",
+       "      <td>37.96</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>564.0</td>\n",
+       "      <td>1591.0</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>1.6563</td>\n",
+       "      <td>57200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2964</th>\n",
+       "      <td>-118.25</td>\n",
+       "      <td>33.94</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>1113.0</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>1305.0</td>\n",
+       "      <td>334.0</td>\n",
+       "      <td>1.1434</td>\n",
+       "      <td>91300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2985</th>\n",
+       "      <td>-120.47</td>\n",
+       "      <td>34.94</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1368.0</td>\n",
+       "      <td>308.0</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>1.8633</td>\n",
+       "      <td>109400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2986</th>\n",
+       "      <td>-118.25</td>\n",
+       "      <td>33.93</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>819.0</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>899.0</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>1.1346</td>\n",
+       "      <td>85400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>-119.86</td>\n",
+       "      <td>34.42</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>1258.0</td>\n",
+       "      <td>607.0</td>\n",
+       "      <td>1.1790</td>\n",
+       "      <td>225000.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>360 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [longitude, latitude, housing_median_age, total_rooms, total_bedrooms, population, households, median_income, median_house_value]\n",
-       "Index: []"
+       "      longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "5       -119.56     36.51                37.0       1018.0           213.0   \n",
+       "6       -121.43     38.63                43.0       1009.0           225.0   \n",
+       "16      -120.81     37.53                15.0        570.0           123.0   \n",
+       "28      -118.45     34.07                19.0       4845.0          1609.0   \n",
+       "43      -117.27     34.09                36.0        848.0           186.0   \n",
+       "...         ...       ...                 ...          ...             ...   \n",
+       "2943    -121.23     37.96                37.0       2351.0           564.0   \n",
+       "2964    -118.25     33.94                43.0       1113.0           378.0   \n",
+       "2985    -120.47     34.94                17.0       1368.0           308.0   \n",
+       "2986    -118.25     33.93                42.0        819.0           233.0   \n",
+       "2995    -119.86     34.42                23.0       1450.0           642.0   \n",
+       "\n",
+       "      population  households  median_income  median_house_value  \n",
+       "5          663.0       204.0         1.6635             67000.0  \n",
+       "6          604.0       218.0         1.6641             67000.0  \n",
+       "16         189.0       107.0         1.8750            181300.0  \n",
+       "28        3751.0      1539.0         1.5830            350000.0  \n",
+       "43         737.0       169.0         0.9838             79300.0  \n",
+       "...          ...         ...            ...                 ...  \n",
+       "2943      1591.0       549.0         1.6563             57200.0  \n",
+       "2964      1305.0       334.0         1.1434             91300.0  \n",
+       "2985       642.0       303.0         1.8633            109400.0  \n",
+       "2986       899.0       228.0         1.1346             85400.0  \n",
+       "2995      1258.0       607.0         1.1790            225000.0  \n",
+       "\n",
+       "[360 rows x 9 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Показать median_house_value где median_income < 2\n",
-    "df[df['median_house_value']<2]"
+    "df[df['median_income']<2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +656,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +742,7 @@
        "1       809.0       277.0         3.5990            176500.0  "
       ]
      },
-     "execution_count": 221,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +774,7 @@
        "Name: median_house_value, Length: 360, dtype: float64"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +806,7 @@
        "Name: median_house_value, Length: 360, dtype: float64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,14 +818,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Andrey\\AppData\\Local\\Temp\\ipykernel_14388\\1910648655.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\Andrey\\AppData\\Local\\Temp\\ipykernel_2952\\1910648655.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df[df['housing_median_age']<20][df['median_house_value']>70000].head(n=4)\n"
      ]
     },
@@ -771,7 +928,7 @@
        "13      1935.0       659.0         4.5625            231200.0  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +1042,7 @@
        "13      1935.0       659.0         4.5625            231200.0  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +1074,7 @@
        "Name: median_house_value, Length: 830, dtype: float64"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1160,7 @@
        "30       568.0       229.0         3.1486            105600.0  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1278,7 @@
        "[3000 rows x 2 columns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1341,7 @@
        "500001.0"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1362,7 @@
        "22500.0"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1404,7 @@
        "233300.0"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1425,7 @@
        "1230.0"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1475,7 @@
        "(-1 + sqrt(7), -sqrt(7) - 1)"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1355,14 +1512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(-15, -14, -13, -12, -11, -(30 - 5*x**2)/x, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14)]\n"
+      "[-1 + sqrt(7), -sqrt(7) - 1]\n"
      ]
     }
    ],
@@ -1374,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1552,7 @@
        "((x < oo) & (-1 + sqrt(7) < x)) | ((-oo < x) & (x < -sqrt(7) - 1))"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1576,7 @@
        "(x < -1 + sqrt(7)) & (-sqrt(7) - 1 < x)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1631,7 @@
        "[-1]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1656,7 @@
        "(-1 < x) & (x < oo)"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1680,7 @@
        "(-oo < x) & (x < -1)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
