added solution for task_42

--- a/homework_11/main.ipynb
+++ b/homework_11/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "190157.0918032787"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,16 +21,29 @@
     "# | Задача 42: Узнать какая максимальная households в зоне минимального значения population |\n",
     "import pandas as pd\n",
     "df= pd.read_csv('C:/Users/Andrey/Desktop/GB/WEB_developer/python/homework_11/california_housing_test.csv')\n",
-    "df[df['population']<=500]['median_house_value'].mean()\n",
-    "\n"
+    "df[df['population']<=500]['median_house_value'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7431.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# | Задача 42: Узнать какая максимальная households в зоне минимального значения population |\n",
+    "df[df['households']==df['households'].max()] ['population'].max()\n"
+   ]
   },
   {
    "cell_type": "code",
